testdata/generated-yamls/back-end/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    name: back-end
  name: back-end
spec: {}
status: {}
