testdata/generated-yamls/back-end/networkpolicy-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: default-deny-all
  namespace: back-end
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
