testdata/generated-yamls/back-end/pod-product-a.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    name: product-a
  name: product-a
  namespace: back-end
spec:
  containers:
  - env:
    - name: PUBLIC_POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: PUBLIC_NAMESPACE_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.namespace
    image: cheriot/clitools:latest
    name: test-container
    ports:
    - containerPort: 3000
      name: api
      protocol: TCP
    resources: {}
  restartPolicy: Never
status: {}
